--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-			<title>project2</title>
+			<title>retrospect</title>
 			<meta charset="utf-8">
             <link rel="stylesheet" href="assets/stylesheet/main.css">
             <meta name="viewport" content="width=device-width, initial-scale=1">
